--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,11 +8,11 @@
     border-bottom: 1px solid #ddd;
   }
 
-  .login-wrapper{
-
+  .errors{
+    color: rgb(233, 56, 77);
   }
 
-  .register-wrapper{
+  .for-register{
     display: none;
   }
 }
