--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,12 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <div class="form-group">
+      <%= f.label :username %>
+      <%= f.text_field :username, :autofocus => true, :class => 'form-control' %>
+    </div>
+    <div class="form-group">
       <%= f.label :first_name %>
-      <%= f.text_field :first_name, :autofocus => true, :class => 'form-control' %>
+      <%= f.text_field :first_name, :class => 'form-control' %>
     </div>
 
     <div class="form-group">
