--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -60,12 +60,19 @@
           </li>
           <li class="welcome-box">
             <% if user_signed_in? %>
-              <a href="#">
+            <div class="welcome-text">
+              <a href="javascript:void(0)">
                 Welcome, <span class="first-name"><%= current_user.username%></span>
               </a>
-              <a href="/users/sign_out" data-method="delete" class="sign-out" title="Sign Out">
-                <%= image_tag 'sign-out.png', alt: 'Sign Out' %>
-              </a>
+            </div>
+
+            <ul class="usermenu">
+              <li>
+                <a href="/users/sign_out" data-method="delete" class="sign-out">
+                  Log Out
+                </a>
+              </li>
+            </ul>
             <% else %>
               <!--<%= link_to "SIGN UP" , new_user_registration_path, :class => 'link' %>
               <a href="#" class="link">/</a>
