--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -48,13 +48,15 @@
 
 .leaderboard-filter{
   background: #505e6c;
-  .filtercheckbox-container{
+  color: #fff;
+  .filter-container{
     color: #fff;
     font-size: 20px;
     padding: 10px 20px 0;
     label{
       font-size: 20px;
     }
+
   }
 }
 
