--- a/app/views/shared/_player_stats.html.erb
+++ b/app/views/shared/_player_stats.html.erb
@@ -1,15 +1,20 @@
+  <% stats = PlayerStat::STATS_ALLOWED.keys %>
   <div class="capitalcontent">
     <div class="capitalpopup">
       <div class="popupTitle">
-        <h2>PEYTON MANNING &nbsp; </h2>
-        <h3> BRONCOS#18</h3>
-        <h3> Salary:</h3>
-        <h4> $10,300</h4>
+        <h2><%= @player.name %> &nbsp; </h2>
+        <h3><%= @player.team %>#<%= @player.sport_position.name %></h3>
+        <h3>Salary:</h3>
+        <h4><%= number_to_currency @player.salary.to_i, precision: 0 %></h4>
         <button type="button" class="btnClose" data-dismiss="modal">X</button>
       </div>
       <h3>Next Gm:</h3>
       <h4>Ten @Den (12/08 4:05 PM EST)</h4>
-      <div class="draftPlayer">DRAFT PLAYER</div>
+      <!--<div class="draftPlayer">DRAFT PLAYER</div>-->
+      <%= content_tag :div, class: 'draftPlayer', data: {player_id: @player.id, player_name: @player.name, player_salary: @player.salary, player_opp: 'Ind@SDD', player_fppg: 24.5, player_position: @player.sport_position.name} do %>
+        DRAFT PLAYER
+      <% end %>
+
       <div class="clear">&nbsp;</div>
       <div>
         <ul class="nav nav-tabs" id="filterSport">
@@ -20,107 +25,49 @@
           <div class="tab-pane active" id="SUMMARY">
             <table width="713" class="summarymatchup">
               <thead>
-              <tr>
-                <th width="136">&nbsp;</th>
-                <th width="38">GP</th>
-                <th width="40">Comp</th>
-                <th width="28">Patt</th>
-                <th width="68">Comp%</th>
-                <th width="41">PaYD</th>
-                <th width="46">PaTD</th>
-                <th width="20">Int</th>
-                <th width="41">RuAtt</th>
-                <th width="42">RuYD</th>
-                <th width="42">RuTD</th>
-                <th width="39">FumL</th>
-                <th width="39">FPPG</th>
-              </tr>
+                <tr>
+                  <th width="180"></th>
+                <% stats.each do |v| %>
+                  <th width="100"><%= v %></th>
+                <% end %>
+                </tr>
               </thead>
               <tbody>
-              <tr>
-                <td>12/1<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                </td>
-                <td>366<span class="border">&nbsp;</span></td>
-                <td>539<span class="border">&nbsp;</span></td>
-                <td>67.9<span class="border">&nbsp;</span></td>
-                <td>4522<span class="border">&nbsp;</span></td>
-                <td>45<span class="border">&nbsp;</span></td>
-                <td>9<span class="border">&nbsp;</span></td>
-                <td>32<span class="border">&nbsp;</span></td>
-                <td>-31<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                <td>10<span class="border">&nbsp;</span></td>
-                <td width="33">36.8</td>
-              </tr>
-              <tr>
-                <td>12/1<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                </td>
-                <td>366<span class="border">&nbsp;</span></td>
-                <td>532349<span class="border">&nbsp;</span></td>
-                <td>67.9<span class="border">&nbsp;</span></td>
-                <td>4522<span class="border">&nbsp;</span></td>
-                <td>45<span class="border">&nbsp;</span></td>
-                <td>9<span class="border">&nbsp;</span></td>
-                <td>32<span class="border">&nbsp;</span></td>
-                <td>-31<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                <td>10<span class="border">&nbsp;</span></td>
-                <td width="33">36.8</td>
-              </tr>
-              <tr>
-                <td>12/1<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                </td>
-                <td>366<span class="border">&nbsp;</span></td>
-                <td>539<span class="border">&nbsp;</span></td>
-                <td>67.9<span class="border">&nbsp;</span></td>
-                <td>4522<span class="border">&nbsp;</span></td>
-                <td>45<span class="border">&nbsp;</span></td>
-                <td>9<span class="border">&nbsp;</span></td>
-                <td>32<span class="border">&nbsp;</span></td>
-                <td>-31<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                <td>10<span class="border">&nbsp;</span></td>
-                <td width="33">36.8</td>
-              </tr>
-              <tr>
-                <td>12/1<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                </td>
-                <td>366<span class="border">&nbsp;</span></td>
-                <td>539<span class="border">&nbsp;</span></td>
-                <td>67.9<span class="border">&nbsp;</span></td>
-                <td>4522<span class="border">&nbsp;</span></td>
-                <td>45<span class="border">&nbsp;</span></td>
-                <td>9<span class="border">&nbsp;</span></td>
-                <td>32<span class="border">&nbsp;</span></td>
-                <td>-31<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                <td>10<span class="border">&nbsp;</span></td>
-                <td width="33">36.8</td>
-              </tr>
-              <tr>
-                <td>2013 Season<span class="border">&nbsp;</span></td>
-                <td>13<span class="border">&nbsp;</span></td>
-                </td>
-                <td>366<span class="border">&nbsp;</span></td>
-                <td>539<span class="border">&nbsp;</span></td>
-                <td>67.9<span class="border">&nbsp;</span></td>
-                <td>4522<span class="border">&nbsp;</span></td>
-                <td>45<span class="border">&nbsp;</span></td>
-                <td>9<span class="border">&nbsp;</span></td>
-                <td>32<span class="border">&nbsp;</span></td>
-                <td>-31<span class="border">&nbsp;</span></td>
-                <td>1<span class="border">&nbsp;</span></td>
-                <td>10<span class="border">&nbsp;</span></td>
-                <td width="33">36.8</td>
-              </tr>
+                <% @summary.each do |key, stat_line| %>
+                  <tr>
+                    <td><%= key %></td>
+                  <% stats.each do |v| %>
+                    <th><%= stat_line[v] %></th>
+                  <% end %>
+                  </tr>
+                <% end %>
+                
               </tbody>
             </table>
           </div>
-          <div class="tab-pane" id="MATCHUP">2</div>
+          <div class="tab-pane" id="MATCHUP">
+            <table width="713" class="summarymatchup">
+              <thead>
+                <tr>
+                  <th width="180">G</th>
+                <% stats.each do |v| %>
+                  <th width="100"><%= v %></th>
+                <% end %>
+                </tr>
+              </thead>
+              <tbody>
+                <% @matchup.each do |key, stat_line| %>
+                  <tr>
+                    <td><%= key %></td>
+                  <% stats.each do |v| %>
+                    <th><%= stat_line[v] %></th>
+                  <% end %>
+                  </tr>
+                <% end %>
+                
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
 
@@ -131,3 +78,12 @@
       <p><strong>Dec 4</strong>: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
     </div>
   </div>
+
+  <script>
+    $(document).ready(function(){
+      $('.draftPlayer').click(function(){
+        $('#player_<%= @player.id %> .add-to-lineup').first().click();
+      });
+      
+    });
+  </script>
