--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -90,7 +90,7 @@
             </tr>
             </thead>
             <tbody>
-              <%= render partial: 'lineups/lineup_player', collection: position.players, as: :player %>
+              <%= render partial: 'lineups/lineup_player', collection: @contest.eligible_players.select {|p| p.sport_position == position}, as: :player %>
             </tbody>
           </table>
         </div>
