--- a/app/views/lineups/_lineup.html.erb
+++ b/app/views/lineups/_lineup.html.erb
@@ -51,9 +51,9 @@
     <p class="last-edit small"><strong>Last Edit:</strong> <%= lineup.updated_at.strftime "%b %d %Y %I:%M %p %Z" %></p>
     <footer>
       <ul>
-        <% unless lineup.completed? %>
+        <% if lineup.completed? %>
           <li><span class="green"><%= link_to "Edit »", edit_lineup_path(lineup) %></span></li>
-          <li><span class="green"><a href="#">Export »</a></span></li>
+          <li><span class="green"><a data-stats-url="/lineups/<%= lineup.id %>/export" href="javascript:void(0);" class="lineup-export">Export »</a></span></li>
         <% end %>
         <li><span class="green"><a href="/entries">Entries »</a></span></li>
         <% unless lineup %>
