--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -51,7 +51,7 @@
             <div class="line"></div>
           </li>
           <li>
-            <a href="#">Rules/Faq</a>
+            <%= link_to 'Rules/Faq', rules_faq_pages_path, :class => ("require-signin" unless user_signed_in?) %>
             <div class="line"></div>
           </li>
           <li class='<%= menu_classes 'account' %>'>
