--- a/app/views/shared/_player_stats.html.erb
+++ b/app/views/shared/_player_stats.html.erb
@@ -83,6 +83,10 @@
     $(document).ready(function(){
       $('.draftPlayer').click(function(){
         $('#player_<%= @player.id %> .add-to-lineup').first().click();
+        if ($('#ajax-modal').length > 0){
+          $('.modal-scrollable').remove()
+          $('.modal-backdrop').remove(); 
+        }
       });
       
     });
